--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,14 @@
-
-
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
-    <h1>Welcome to <%= title %></h1>
-    <a href="/books">View All Books</a>
-    <a href="/books/add">Add a New Book</a>
+    <link rel="stylesheet" href="../public/style.css" />
+  </head>
+  <body>
+    <h1>Welcome to the party <%= title %></h1>
+    <a href="/menus">View All Menus</a>
+    <a href="/menus/add">Add a New Menu</a>
 
-    <img src="./stock.jpg" alt="Stock Image">
-</body>
+    <img src="../public/wedding.jpg" alt="Stock Image" />
+  </body>
 </html>
-
-
-
