--- a/views/edit-menus.ejs
+++ b/views/edit-menus.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Edit Menu</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../public/style.css" />
 </head>
 <body>
     <h1>Edit Menu</h1>
